--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-WUZAPI_ADMIN_TOKEN=1234ABCD
-DB_USER=wuzapi
-DB_PASSWORD=wuzapi
+WUZAPI_ADMIN_TOKEN=123456
+DB_USER=admin
+DB_PASSWORD=admin
 DB_NAME=wuzapi
 DB_HOST=localhost
 DB_PORT=5432
+PORT=7002
