--- a/static/api/spec.yml
+++ b/static/api/spec.yml
@@ -870,95 +870,95 @@ paths:
                     "success": true,
                   }
 
-  /chat/downloadimage:
+  
+  /chat/download:
+
+
     post:
       tags:
         - Chat
-      summary: Baixar imagem da mensagem
-      description: Baixa uma imagem de uma mensagem e retorna em formato Base64 codificado
+      summary: Baixar mídia de mensagem
+      description: Baixa mídia (imagem, vídeo, áudio, documento ou sticker) de uma mensagem e retorna o arquivo ou URL do R2 se configurado
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "#definitions/DownloadImage"
+              type: object
+              required:
+                - URL
+                - MediaKey
+                - Mimetype
+                - FileEncSHA256
+                - FileSHA256
+                - FileLength
+              properties:
+                MessageType:
+                  type: string
+                  description: Tipo da mídia (imageMessage, videoMessage, audioMessage, documentMessage, stickerMessage)
+                  example: "imageMessage"
+                URL:
+                  type: string
+                  description: URL da mídia
+                  example: "https://mmg.whatsapp.net/v/t62.7118-24/..."
+                DirectPath:
+                  type: string
+                  description: Caminho direto da mídia
+                  example: "/v/t62.7118-24/..."
+                MediaKey:
+                  type: string
+                  description: Chave da mídia em base64
+                  example: "YW5kIHRoaXMgaXMgYSBzYW1wbGUgbWVkaWEga2V5"
+                Mimetype:
+                  type: string
+                  description: Tipo MIME do arquivo
+                  example: "image/jpeg"
+                FileEncSHA256:
+                  type: string
+                  description: SHA256 do arquivo criptografado em base64
+                  example: "YW5kIHRoaXMgaXMgYSBzYW1wbGUgc2hhMjU2"
+                FileSHA256:
+                  type: string
+                  description: SHA256 do arquivo em base64
+                  example: "YW5kIHRoaXMgaXMgYW5vdGhlciBzYW1wbGUgc2hhMjU2"
+                FileLength:
+                  type: integer
+                  description: Tamanho do arquivo em bytes
+                  example: 123456
+                FileName:
+                  type: string
+                  description: Nome do arquivo (opcional)
+                  example: "imagem.jpg"
 
       responses:
         200:
-          description: Response
+          description: Resposta bem-sucedida
           content:
             application/json:
               schema:
                 example:
                   {
-                    "code": 200,
-                    "data":
-                      {
-                        "Data": "data:image/jpeg;base64,iVBORw0KGgoA5CYII...=",
-                        "Mimetype": "image/jpeg",
-                      },
-                    "success": true,
+                    "url": "https://custom-domain.com/arquivo.jpg",
+                    "mimetype": "image/jpeg",
+                    "size": 123456,
+                    "fileName": "arquivo.jpg"
                   }
-
-  /chat/downloadvideo:
-    post:
-      tags:
-        - Chat
-      summary: Baixar vídeo da mensagem
-      description: Baixa um vídeo de uma mensagem e retorna em formato Base64 codificado
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#definitions/DownloadImage"
-
-      responses:
-        200:
-          description: Response
-          content:
-            application/json:
+            image/*:
               schema:
-                example:
-                  {
-                    "code": 200,
-                    "data":
-                      {
-                        "Data": "data:video/mp4;base64,iVBORw0KGgoA5CYII...=",
-                        "Mimetype": "video/mp4",
-                      },
-                    "success": true,
-                  }
-
-  /chat/downloaddocument:
-    post:
-      tags:
-        - Chat
-      summary: Baixar documento da mensagem
-      description: Baixa um documento de uma mensagem e retorna em formato Base64 codificado
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#definitions/DownloadImage"
-
-      responses:
-        200:
-          description: Response
-          content:
-            application/json:
+                type: string
+                format: binary
+            video/*:
               schema:
-                example:
-                  {
-                    "code": 200,
-                    "data":
-                      {
-                        "Data": "data:application/pdf;base64,iVBORw0KGgoA5CYII...=",
-                        "Mimetype": "application/pdf",
-                      },
-                    "success": true,
-                  }
+                type: string
+                format: binary
+            audio/*:
+              schema:
+                type: string
+                format: binary
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
 
   /chat/presence:
     post:
