--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<img src=\"static/favicon.ico\" width=\"30\"> WuzAPI is an implementation of [@tulir/whatsmeow](https://github.com/tulir/whatsmeow) library as a simple RESTful API service with multiple device support and concurrent sessions.",
   "main": "index.js",
   "scripts": {
-    "dev": "go build . && ./wuzapi",
+    "dev:wuzapi": "clear && go build . && ./wuzapi",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
